[tool.poetry]
name = "pybmtool"
version = "0.1.2"
description = "A Python library/CLI tool for parsing Apple's BuildManifest plist files inside a firmware ipsw/ota."
authors = ["Cryptiiiic <liamwqs@gmail.com>"]
license = "lgpl-3.0"
readme = "README.md"
repository = "https://github.com/Cryptiiiic/BMTool"

packages = [
    { include = "pybmtool" },
    { include = "pybmtool/**/*.py" },
]

[tool.poetry.scripts]
BMTool = "pybmtool.__main__:cli"

[tool.poetry.dependencies]
python = "^3.9"
remotezip = "^0.9.4"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Cryptiiiic/BMTool/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
